--- a/src/styles/app.css
+++ b/src/styles/app.css
@@ -8,7 +8,7 @@
   display: flex;
   flex-direction: column;
   align-items: center;
-  justify-content: center;
+  /* justify-content: center; */
   padding: 10px;
 }
 
@@ -18,16 +18,19 @@
   padding: 40px 20px;
   border: 1px solid #ccc;
   border-radius: 20px;
-  background: linear-gradient(135deg, #ffffff, #e0e0e0);
+  background: linear-gradient(135deg, #333, #444);  /* Darker background */
   box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);
   text-align: center;
+  position: relative;  /* Helps positioning relative to screen */
+  top: 10px;  /* Adjust card's vertical position */
+  margin-top: 80px;
 }
 
-.slider h2 {
-  font-size: 22px;
-  font-family: 'Open Sans', sans-serif;
-  color: #333;
-  font-weight: 600;
+.slider p {
+  font-size: 20px;
+  font-family: 'Brush Script MT', Cursive;
+  color: #fff;
+  /* font-weight: 600; */
   word-wrap: break-word;
 }
 
@@ -71,10 +74,10 @@ button:hover {
 }
 
 .hover-image {
-  margin-top: 20px;
+  margin-top: 40px;
   font-size: 14px;
-  color: #333;
-  background-color: #e0e0e0;
+  color: #fff;
+  background-color: #444;
   padding: 10px;
   border-radius: 5px;
   display: inline-block;
@@ -92,20 +95,7 @@ button:hover {
 
 @media (max-width: 768px) {
   .slider {
-    padding: 20px;
-  }
-
-  button {
-    padding: 10px 20px;
-    font-size: 14px;
-  }
-
-  .hover-image, .gif {
-    font-size: 12px;
-  }
-
-  .buttons {
-    gap: 10px;
+    top: 10px;  /* Adjust card's vertical position for mobile */
   }
 }
 
